[package]
name = "planteboks"
version = "0.1.0"
edition = "2018"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-probe = { version = "0.2.0", features = ["print-rtt"] }
log = "0.4"
rtt-logger = "0.1"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

cortex-m = { version = "0.6", features = ["inline-asm"] }
cortex-m-rt = "0.6"

dht-sensor = "0.2.1"
embedded-hal = { version = "0.2.4", features = ["unproven"] }

#drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", features = ["chip+nrf52833", "wifi+esp8266"], default-features = false }
#embassy = {git = "https://github.com/drogue-iot/embassy.git", branch = "drogue", default-features = false}
#embassy-nrf = {git = "https://github.com/drogue-iot/embassy.git", branch = "drogue", default-features = false}

drogue-device = { path = "../drogue-iot/drogue-device/device", features = ["chip+nrf52833", "wifi+esp8266"], default-features = false }
embassy = {path = "../embassy/embassy", default-features = false}
embassy-nrf = {path = "../embassy/embassy-nrf", default-features = false}

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11", default-features = false }

[patch.crates-io]
cortex-m = {git = "https://github.com/rust-embedded/cortex-m.git", branch = "master", features = ["device"]}
