[package]
name = "planteboks"
version = "0.1.0"
edition = "2018"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>"
]

[dependencies]
panic-probe = { version = "0.2.0", features = ["print-rtt"] }
log = "0.4"
rtt-logger = "0.1"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

cortex-m = { version = "0.6", features = ["inline-asm"] }
cortex-m-rt = "0.6"

dht-sensor = "0.2.1"
embedded-hal = { version = "0.2.4", features = ["unproven"] }

drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", branch = "main", features = ["wifi+esp8266"], default-features = false }
#drogue-device = { path = "../drogue-iot/drogue-device/device", features = ["wifi+esp8266"], default-features = false }
embassy = {git = "https://github.com/drogue-iot/embassy.git", branch = "master", default-features = false}
embassy-nrf = {git = "https://github.com/drogue-iot/embassy.git", branch = "master", features = ["nrf52833"], default-features = false}

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4", default-features = false }
heapless = "0.6"
base64 = { version = "0.13.0", default-features = false }

[patch.crates-io]
cortex-m = {git = "https://github.com/rust-embedded/cortex-m.git", branch = "master", features = ["device"]}

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false